[gd_scene load_steps=5 format=3 uid="uid://cy4fx1t1282if"]

[ext_resource type="Script" path="res://scenes/invasions.gd" id="1_cqnnp"]
[ext_resource type="TileSet" uid="uid://cruy4wbrnj8mo" path="res://assets/tilemaps/test-tilemap.tres" id="2_droar"]
[ext_resource type="PackedScene" uid="uid://gd3fsrk04328" path="res://scenes/camera.tscn" id="3_30d1l"]
[ext_resource type="PackedScene" uid="uid://n8unqd6bldoo" path="res://scenes/interface/gui.tscn" id="4_67hxr"]

[node name="Overworld_tilemap" type="Node2D"]
script = ExtResource("1_cqnnp")

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_droar")
format = 2

[node name="camera" parent="." instance=ExtResource("3_30d1l")]

[node name="GUI" parent="." instance=ExtResource("4_67hxr")]

[node name="FirstInvasionStart" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InvasionDuration" type="Timer" parent="."]
wait_time = 60.0

[node name="SpawnInvader" type="Timer" parent="."]

[node name="PrepPhase" type="Timer" parent="."]

[connection signal="timeout" from="FirstInvasionStart" to="." method="_on_first_invasion_start_timeout"]
[connection signal="timeout" from="InvasionDuration" to="." method="_on_invasion_duration_timeout"]
[connection signal="timeout" from="SpawnInvader" to="." method="_on_spawn_invader_timeout"]
[connection signal="timeout" from="PrepPhase" to="." method="_on_prep_phase_timeout"]
